--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="main.css" />
-    <title>Face time!</title>
+    <title>Face time la la la</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 
