--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 <body>
     <div class="page">
         <div class="head">
-            <div class="face">:|</div>
+            <div class="face">:)</div>
         </div>
     </div>
+<script src="./main.js"></script>
 </body>
 
 </html>
